
0.8.0 (Uploaded 8/8/22)

	[Forbidden knowlege 2: electric boogaloo] Update vignettes and add csv raster compatibility

	csv raster compatibility (0.7.2)

	Added vignettes for data_flagger and shapefile_checker (0.7.3)

	Remove pie chart, make it bars so it's true (0.7.4)

0.8.1 (Merged 13/9/22)

	Added NI and Scotland capacity

	Added a targeted function to get the median of the datsa without London, map it to RUC and calculate average IMD for each RUC

	Got r2 values for the median

	Calculated area for each LSOA

0.8.2 (Uploaded 4/10/22)

	Made a section for just London
	
	Included a histogram of the IMD distribution in each IMD

0.8.3 (Uploaded 6/10/22)

	Changed geom point to line in ruc vs imd

	Ported over a graph faceted by mean and median

	Changed some axis labels to include superscripts

0.8.4 (Uploaded 6/10/22)

	Updated all axis labels to include proper units

	Made all xaxis proper integers

	Excluded offshore from faceted sources

0.8.5

	Improved labelling of faceted_sources

	Altered bulk processor to properly distinguish between county/ua and city
	Added refined_things to bulk_processor	
		Graphs with only the median lines plotted
		London is excluded
	
0.9.0 

	[End of the beginning] Make all the planned qol changes and improvements so it's in a releasable state

	Optimisation of is_raw

	Check and improve all vignettes

	Include units in graph axis


Planned content updates:

	[The pendulum] Time based resolution of data
	
	[The pit] Data separated by different deciles

	[The eye] Use rmd to automate a report with text explaining the figures

QOL updates:

	check the bulk_processor in the city_processor vignette works

	vignettes
		create_prawns

	optimisation: make it so is.raw executes in a single pass rather than two

 	(awkward) add input flexibility, but this is not necessary to the main functionality, the presence of raw renders it obsolete so this not exists to stop you wanting it

	make the tif and csv paths dynamic