@@ -1,140 +1,3 @@
-scale_y_continuous(expand=c(0,0.25))
-source_summary
-ggsave(filename="Outputs/Plots/NOx/NOX_source_summary_2019.png",
-plot=source_summary,
-units = "mm",height = 339,width=480,
-device="png")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Startup.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Startup.R", encoding = 'UTF-8')
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-source("~/GitHub/Pollutant-processing-hub/Scripts/Startup.R", encoding = 'UTF-8')
-source("~/GitHub/Pollutant-processing-hub/Scripts/Analysis/Source breakdown.R")
-long_data <- pivot_longer(measure_comp,
-cols=c("Income","Employment","Health","Education","Crime","Housing","Living.environment","Access"),
-names_to = "Deprivation domain",
-values_to = "Percentage") %>%
-rename(Measure=X.U.FEFF.Index.of.deprivation) %>%
-mutate(`Deprivation domain`=fct_reorder(`Deprivation domain`,Percentage,mean,.desc=TRUE))
-library(PRAWNS)
-Startup()
-setwd("~/Github/Fuse-data")
-measure_comp <- read.csv("Data/deprivation_comparison.csv",encoding = "UTF-8") %>% tibble()
-long_data <- pivot_longer(measure_comp,
-cols=c("Income","Employment","Health","Education","Crime","Housing","Living.environment","Access"),
-names_to = "Deprivation domain",
-values_to = "Percentage") %>%
-rename(Measure=X.U.FEFF.Index.of.deprivation) %>%
-mutate(`Deprivation domain`=fct_reorder(`Deprivation domain`,Percentage,mean,.desc=TRUE))
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(position = "dodge")
-ggsave(filename= paste0("~/Github/Fuse-data/Deprivation measure comparison.svg"),
-plot=last_plot(),
-device="svg",
-width = 50,
-height = 30,
-units = "cm"
-)
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(position = position_dodge(width=1))
-ggsave(filename= paste0("~/Github/Fuse-data/Deprivation measure comparison.svg"),
-plot=last_plot(),
-device="svg",
-width = 50,
-height = 30,
-units = "cm"
-)
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(width=1,position = "dodge")
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(width=2,position = "dodge")
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(position = "dodge")
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(width=0.6,position = "dodge")
-ggplot(data=long_data)+aes(x=`Deprivation domain`,y=Percentage, fill=Measure)+geom_col(width=0.7,position = "dodge")
-ggsave(filename= paste0("~/Github/Fuse-data/Deprivation measure comparison.png"),
-plot=last_plot(),
-device="png",
-width = 50,
-height = 30,
-units = "cm"
-)
-ggsave(filename= paste0("~/Github/Fuse-data/Deprivation measure comparison.png"),
-plot=last_plot(),
-device="png",
-width = 25,
-height = 15,
-units = "cm"
-)
-library(ggplot2)
-library(tidyverse)
-setwd("~/R/tester")
-#read in the data
-data_to_plot <- read.csv("testing.csv")
-ggplot(data=data_to_plot,
-#set the variables that'll be used
-aes(x=ret1,
-colour=compound)+
-geom_point()
-ggplot(data=data_to_plot,
-#set the variables that'll be used
-aes(x=ret1,
-y=ret2,
-colour=compound)+
-geom_point()
-)
-library(tidyverse)
-#read in the data
-data_to_plot <- read.csv("testing.csv")
-ggplot(data=data_to_plot,
-#set the variables that'll be used
-aes(x=ret1,
-y=ret2,
-colour=compound))+
-geom_point()
-ggplot(data=data_to_plot,
-#set the variables that'll be used
-aes(x=ret1,
-y=ret2,
-colour=compound))+
-geom_point(size=2)
-source("~/.active-rstudio-document")
-source("~/.active-rstudio-document")
-source("~/.active-rstudio-document")
-source("~/.active-rstudio-document")
-#The startup section
-library(PRAWNS)
-setwd("~/GitHub/Data-analysis-with-PRAWNS-demo")
-Startup()
-city <- "Bristol"
-#Process PM2.5
-bulk_processor(raster_path = "Data/NOx_rasters_2020",
-shapefile_path = "Data/2011_LSOA_shapefile_20m_generalised",
-pollutant_data_name = "nox",
-year = 2020,
-pollutant = "NOx"
-)
-#Process PM2.5
 bulk_processor(raster_path = "Data/NOx_rasters_2020",
 shapefile_path = "Data/2011_LSOA_shapefile_20m_generalised",
 pollutant_data_name = "nox",
@@ -510,3 +373,140 @@ source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding =
 library(PRAWNS)
 source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
 source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+library(PRAWNS)
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+library(PRAWNS)
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+library(PRAWNS)
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+last_error()
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R")
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/area_IMD_vs_pol.R")
+area_IMD_vs_pol("NOx_emissions_in_2020_v0.8.3/PRAWN.csv","NOx",2020)
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/2020 compile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/6 10 22 compile.R")
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/recompile.R", encoding = 'UTF-8')
+source("~/GitHub/Data-analysis-with-PRAWNS-demo/Scripts/6 10 22 compile.R")
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+source("~/GitHub/PRAWNS/R/faceted_sources.R")
+faceted_sources("NOx_emissions_in_2020_v0.8.4/PRAWN.csv","NOx",2020)
+area_type = "County/UA"
+prawn_path <- "NOx_emissions_in_2020_v0.8.4/PRAWN.csv"
+#Plot the average pollutant vs average IMD grouped by county/ua
+avg_imd_pol <- area_IMD_vs_pol(prawn_path=prawn_path,
+pollutant = pollutant,
+area_type = "County/UA",
+year=year)
+avg_imd_pol
